Bug 1377948 Silence two warnings that occur as errors on the MinGW build r=arai

MozReview-Commit-ID: LQBAoLVpVab